--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "next": "^15.3.5",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
